fixed some formatting with the background and buttons

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -69,8 +69,10 @@ input[type=checkbox]:checked + label.strikethrough{
   
     display: block;
     background-image: url("https://source.unsplash.com/user/chatelp/1920x1200");
-    width: 1920px;
-    height: 1200px;
+    width: 100%;
+    height: 100%;
+
+    background-size: cover;
   
     -webkit-filter: brightness(70%);
     -moz-filter: brightness(70%);
@@ -83,13 +85,13 @@ input[type=checkbox]:checked + label.strikethrough{
         -ms-animation: fadein 1s; /* Internet Explorer */
          -o-animation: fadein 1s; /* Opera < 12.1 */
             animation: fadein 1s;
-  }
+}
   
 
 #delete-all {
     position: relative;
     margin-right: 51.5vw;
-    margin-top: 2.5vw;
+    margin-top: 25%;
     right: 0;
 }
 
@@ -142,5 +144,13 @@ input[type=checkbox]:checked + label.strikethrough{
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
   } 
+
+  @media (min-width: 768px) {
+    .form-inline .radio input[type="radio"], 
+    .form-inline .checkbox input[type="checkbox"] {
+        float: left;
+        margin-right: 5px;
+    }
+}
 
   
